methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:6: error: not found: value vuBiscuit
        vuBiscuit=true
        ^MethodsReturning:9: error: not found: value vuBiscuit
      return(vuBiscuit)
             ^MethodsReturning:2: error: type mismatch;
 found   : Unit
 required: Boolean
  for (j <- 1 to 6){
         ^